--- a/.github/workflows/docker_images.yml
+++ b/.github/workflows/docker_images.yml
@@ -419,6 +419,7 @@ jobs:
         uses: actions/checkout@v6
         with:
           persist-credentials: false
+          submodules: recursive
 
       - name: Log in to DockerHub
         uses: docker/login-action@v3
@@ -642,6 +643,35 @@ jobs:
           push: ${{ inputs.environment != '' }}
           outputs: ${{ steps.prereqs.outputs.docker_output }}
 
+      - name: Extract cuda-quantum-src metadata
+        id: cudaq_src_metadata
+        if: success() && !cancelled() && inputs.environment != ''
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ replace(steps.prereqs.outputs.image_name, 'cuda-quantum', 'cuda-quantum-src') }}
+          flavor: |
+            latest=false
+            suffix=${{ steps.prereqs.outputs.image_tag_suffix }},onlatest=true
+          tags: type=raw,value=${{ steps.prereqs.outputs.image_tag }}
+          labels: |
+            org.opencontainers.image.title=cuda-quantum-src
+            org.opencontainers.image.description=CUDA Quantum base image with third-party library (tpls) source
+
+      - name: Build cuda-quantum-src image
+        id: cudaq_src_build
+        if: success() && !cancelled() && inputs.environment != ''
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./docker/release/cudaq-src.Dockerfile
+          build-args: |
+            base_image=${{ steps.prereqs.outputs.image_name }}@${{ steps.cudaq_build.outputs.digest }}
+          tags: ${{ steps.cudaq_src_metadata.outputs.tags }}
+          labels: ${{ steps.cudaq_src_metadata.outputs.labels }}
+          platforms: ${{ inputs.platforms }}
+          provenance: false
+          push: true
+
       - name: Write matrix outputs
         uses: cloudposse/github-action-matrix-outputs-write@1.0.0
         with:
@@ -681,6 +711,17 @@ jobs:
           NGC_CLI_TEAM: 'nightly'
         run: |
           echo "Signing ${TAGS}"
+          ngc-cli/ngc registry image publish --source ${TAGS} ${TAGS} --sign
+
+      - name: Sign cuda-quantum-src image with NGC CLI
+        if: steps.cudaq_src_build.outcome == 'success' && needs.metadata.outputs.push_to_ngc == 'true'
+        env:
+          TAGS: ${{ steps.cudaq_src_metadata.outputs.tags }}
+          NGC_CLI_API_KEY: ${{ secrets.NGC_CREDENTIALS }}
+          NGC_CLI_ORG: ${{ github.repository_owner }}
+          NGC_CLI_TEAM: 'nightly'
+        run: |
+          echo "Signing cuda-quantum-src ${TAGS}"
           ngc-cli/ngc registry image publish --source ${TAGS} ${TAGS} --sign
 
   documentation:
