--- a/.github/workflows/prebuilt_binaries.yml
+++ b/.github/workflows/prebuilt_binaries.yml
@@ -187,16 +187,24 @@ jobs:
             ${{ steps.config.outputs.additional_build_caches }}
           push: true
 
-      - name: Extract ccache from assets image
-        uses: ./.github/actions/ccache-extract-docker
-        with:
-          image: ${{ steps.config.outputs.image_name }}@${{ steps.docker_build.outputs.digest }}
+      - name: Extract ccache from build
+        run: |
+          mkdir -p /tmp/ccache-export
+          docker buildx build \
+            -f ./docker/build/assets.Dockerfile . \
+            --build-context ccache-data=/tmp/ccache-data \
+            --build-arg release_version=${{ steps.config.outputs.cudaq_version }} \
+            --build-arg base_image=${{ inputs.platform_base_image }} \
+            --build-arg cuda_version=${{ inputs.cuda_version }} \
+            --target ccache-export \
+            --output type=local,dest=/tmp/ccache-export \
+            2>/dev/null || true
 
       - name: Push ccache to GHCR
         uses: ./.github/actions/ccache-push
         with:
           cache-key: ${{ steps.config.outputs.ccache_key }}
-          cache-path: /tmp/ccache-out/.ccache
+          cache-path: /tmp/ccache-export/ccache
           registry-token: ${{ github.token }}
 
       - name: Install Cosign
