--- a/.github/actions/ccache-setup/action.yml
+++ b/.github/actions/ccache-setup/action.yml
@@ -44,7 +44,7 @@ runs:
         # Normalize absolute paths under the workspace so __FILE__ macros
         # and hash_dir produce consistent hashes across CI runs.
         ccache --set-config=base_dir="${GITHUB_WORKSPACE:-$(pwd)}"
-        ccache --set-config=log_file="${GITHUB_WORKSPACE:-$(pwd)}/ccache.log"
+        echo "CCACHE_LOGFILE=${GITHUB_WORKSPACE:-$(pwd)}/ccache.log" >> $GITHUB_ENV
         # CI checkouts create files with fresh timestamps every run.
         # Without these, ccache hashes include mtime/ctime causing misses
         # on identical content.
