--- a/.github/actions/ccache-push/action.yml
+++ b/.github/actions/ccache-push/action.yml
@@ -122,11 +122,17 @@ runs:
         echo "Pushed ccache to $image:$tag"
         echo "pushed=true" >> $GITHUB_OUTPUT
 
+    - name: Generate unique artifact name
+      if: always() && inputs.upload-log == 'true'
+      id: artifact
+      shell: bash
+      run: echo "name=ccache-log-${{ inputs.cache-key }}-$RANDOM" >> $GITHUB_OUTPUT
+
     - name: Upload ccache log
       if: always() && inputs.upload-log == 'true'
       uses: actions/upload-artifact@v4
       with:
-        name: ccache-log-${{ inputs.cache-key }}-${{ github.run_attempt }}
+        name: ${{ steps.artifact.outputs.name }}
         path: ${{ github.workspace }}/ccache.log
         retention-days: 1
         if-no-files-found: ignore
