build: update to LLVM 22 and switch from pybind11 to nanobind
Update tpls/llvm submodule to 3d7018c70 (MLIR pybind11 removal commit).
Replace pybind11 build-from-source in build_llvm.sh with nanobind
detection (nanobind is pip-installed via requirements-dev.txt).
Remove PYBIND11_INSTALL_PREFIX from set_env_defaults.sh and
install_prerequisites.sh. Bump llvmlite to 0.46.0 and add
nanobind==2.11.0 to requirements-dev.txt.

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -16,7 +16,8 @@ psutil
 numpy==1.26.4
 notebook==7.5.2
 nbconvert==7.17.0
-llvmlite==0.44.0
+llvmlite==0.46.0
+nanobind==2.11.0
 scipy==1.16.3
 requests==2.32.3
 fastapi==0.111.0
