--- a/tools/nvqpp/nvq++.in
+++ b/tools/nvqpp/nvq++.in
@@ -280,9 +280,15 @@ install_dir="$(
 	cd -- "$(dirname "$0")/.." >/dev/null 2>&1
 	pwd -P
 )"
-llvm_install_dir="@LLVM_BINARY_DIR@"
 llvm_version="@LLVM_VERSION_MAJOR@.@LLVM_VERSION_MINOR@.@LLVM_VERSION_PATCH@"
 llvm_suffix="@NVQPP_LLVM_EXECUTABLE_SUFFIX@"
+# The installer bundles clang/llc/lld into the same bin/ directory as nvq++.
+# If they're there, use them; otherwise fall back to the LLVM build directory.
+if [ -x "${install_dir}/bin/clang++${llvm_suffix}" ]; then
+	llvm_install_dir="${install_dir}"
+else
+	llvm_install_dir="@LLVM_BINARY_DIR@"
+fi
 
 INCLUDES="@CUDAQ_CXX_NVQPP_INCLUDE_STR@"
 # Full version string of this nvq++ script.
