--- a/.github/workflows/test_in_devenv.yml
+++ b/.github/workflows/test_in_devenv.yml
@@ -250,9 +250,13 @@ jobs:
               exit 1
             fi
             for backendTest in python/tests/backends/*.py; do
-              python -m pytest -v --durations=0  $backendTest
+              output=$(python -m pytest -v -s --durations=0 $backendTest 2>&1)
               pytest_status=$?
-
+              echo "$output"
+              if echo "$output" | grep -q "Mock qpu not available"; then
+                echo "::error file=test_in_devenv.yml::Mock QPU unavailable for $backendTest"
+                exit 1
+              fi
               # Exit code 5 indicates that no tests were collected,
               # i.e. all tests in this file were skipped.
               if [ ! $pytest_status -eq 0 ] && [ ! $pytest_status -eq 5 ]; then
