--- a/.github/workflows/test_in_devenv.yml
+++ b/.github/workflows/test_in_devenv.yml
@@ -249,13 +249,14 @@ jobs:
               echo "::error file=test_in_devenv.yml::Python tests failed with status $pytest_status."
               exit 1
             fi
+            mock_qpu_failures=""
             for backendTest in python/tests/backends/*.py; do
               output=$(python -m pytest -v -s --durations=0 $backendTest 2>&1)
               pytest_status=$?
               echo "$output"
               if echo "$output" | grep -q "Mock qpu not available"; then
                 echo "::error file=test_in_devenv.yml::Mock QPU unavailable for $backendTest"
-                exit 1
+                mock_qpu_failures="$mock_qpu_failures $backendTest"
               fi
               # Exit code 5 indicates that no tests were collected,
               # i.e. all tests in this file were skipped.
@@ -264,6 +265,10 @@ jobs:
                 exit 1
               fi
             done
+            if [ -n "$mock_qpu_failures" ]; then
+              echo "::error file=test_in_devenv.yml::Mock QPU tests skipped due to missing startServer:$mock_qpu_failures"
+              exit 1
+            fi
 
       - name: Save environment
         id: env_save
