--- a/.github/actions/ccache-push/action.yml
+++ b/.github/actions/ccache-push/action.yml
@@ -15,8 +15,8 @@ inputs:
     description: 'PR number for tag. Auto-detected from ref_name when empty.'
     required: false
     default: ''
-  miss-threshold:
-    description: 'Skip push if ccache miss rate is below this percentage. Set to 0 to always push.'
+  delta-threshold:
+    description: 'Skip push if cache file count changed by less than this percentage. Set to 0 to always push.'
     required: false
     default: '10'
   ref-name:
@@ -42,7 +42,7 @@ runs:
       shell: bash
       run: |
         cache_path="${{ inputs.cache-path }}"
-        miss_threshold="${{ inputs.miss-threshold }}"
+        delta_threshold="${{ inputs.delta-threshold }}"
 
         # Validate cache path has content
         if [ ! -d "$cache_path" ] || [ -z "$(ls -A "$cache_path" 2>/dev/null)" ]; then
@@ -51,39 +51,37 @@ runs:
           exit 0
         fi
 
-        # Collect stats: prefer _build_stats.txt from Docker export,
-        # fall back to querying ccache on the host (native builds).
+        # Print stats for visibility: prefer _build_stats.txt from Docker
+        # export, fall back to querying ccache on the host (native builds).
         stats_file="$cache_path/_build_stats.txt"
         if [ -f "$stats_file" ]; then
           echo "=== ccache stats (from Docker build) ==="
           cat "$stats_file"
-          stats=$(cat "$stats_file")
         elif command -v ccache &>/dev/null; then
           echo "=== ccache stats ==="
           ccache -s 2>/dev/null || true
-          stats=$(ccache --print-stats 2>/dev/null || true)
+        fi
+
+        # Compute cache delta: compare current file count to the baseline
+        # recorded at restore time. This measures how much the cache
+        # actually changed, regardless of whether the build ran natively
+        # or inside Docker.
+        restore_count_file="$cache_path/_restore_file_count.txt"
+        current_count=$(find "$cache_path" -type f | wc -l | tr -d ' ')
+        if [ -f "$restore_count_file" ]; then
+          restore_count=$(cat "$restore_count_file" | tr -d ' ')
         else
-          stats=""
+          restore_count=0
         fi
-
-        # Parse miss/hit counts from --print-stats (tab-separated) or -s output
-        if [ -n "$stats" ]; then
-          cache_miss=$(echo "$stats" | awk -F'\t' '$1=="cache_miss"{print $2}')
-          if [ -n "$cache_miss" ]; then
-            direct_hit=$(echo "$stats" | awk -F'\t' '$1=="direct_cache_hit"{print $2}')
-            preproc_hit=$(echo "$stats" | awk -F'\t' '$1=="preprocessed_cache_hit"{print $2}')
-            cache_hit=$((${direct_hit:-0} + ${preproc_hit:-0}))
-          else
-            cache_miss=$(echo "$stats" | grep "cache miss" | grep -o '[0-9]*' | head -1)
-            cache_hit=$(echo "$stats" | grep "cache hit" | grep -o '[0-9]*' | head -1)
-          fi
+        new_files=$((current_count - restore_count))
+        if [ "$restore_count" -gt 0 ]; then
+          delta_pct=$((new_files * 100 / restore_count))
+        elif [ "$current_count" -gt 0 ]; then
+          delta_pct=100
+        else
+          delta_pct=0
         fi
-
-        total=$((${cache_hit:-0} + ${cache_miss:-0}))
-        if [ "$total" -gt 0 ]; then
-          miss_pct=$((cache_miss * 100 / total))
-          echo "ccache miss rate: ${miss_pct}% ($cache_miss misses / $total total)"
-        fi
+        echo "Cache delta: ${new_files} new files (${delta_pct}% change, ${restore_count} -> ${current_count})"
 
         # Always push on the default branch to keep the baseline fresh
         default_branch="${{ github.event.repository.default_branch }}"
@@ -92,16 +90,10 @@ runs:
 
         if $is_default_branch; then
           echo "On default branch ($default_branch); always pushing to keep baseline fresh."
-        elif [ "$miss_threshold" -gt 0 ] 2>/dev/null; then
-          if [ "$total" -eq 0 ]; then
-            echo "No compilations detected; skipping push."
-            echo "pushed=false" >> $GITHUB_OUTPUT
-            exit 0
-          elif [ "$miss_pct" -lt "$miss_threshold" ]; then
-            echo "Miss rate below ${miss_threshold}%; skipping push."
-            echo "pushed=false" >> $GITHUB_OUTPUT
-            exit 0
-          fi
+        elif [ "$delta_threshold" -gt 0 ] 2>/dev/null && [ "$delta_pct" -lt "$delta_threshold" ]; then
+          echo "Cache changed by ${delta_pct}% (threshold: ${delta_threshold}%); skipping push."
+          echo "pushed=false" >> $GITHUB_OUTPUT
+          exit 0
         fi
 
         # Extract log and stats from cache dir before tarring so they
@@ -110,7 +102,7 @@ runs:
         if [ -f "$cache_path/ccache.log" ]; then
           mv "$cache_path/ccache.log" "${GITHUB_WORKSPACE:-$(pwd)}/ccache.log"
         fi
-        rm -f "$stats_file"
+        rm -f "$stats_file" "$restore_count_file"
 
         # Determine tag
         repo_owner=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
